[gd_scene load_steps=3 format=3 uid="uid://dbv8f10a2jvwh"]

[ext_resource type="Script" uid="uid://4jundge40nav" path="res://scripts/UI/level_up_popup.gd" id="1_1qsk5"]
[ext_resource type="PackedScene" uid="uid://cinlh5y24rud6" path="res://Scenes/ui/trait_card.tscn" id="2_c8otl"]

[node name="LevelUpPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1qsk5")
trait_card_scene = ExtResource("2_c8otl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="popup container" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HeroColumn" type="VBoxContainer" parent="Panel/popup container"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HeroTitle" type="Label" parent="Panel/popup container/HeroColumn"]
layout_mode = 2
text = "LEVEL_UP_POPUP_COLUMN_HERO"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HeroTraitsContainer" type="HBoxContainer" parent="Panel/popup container/HeroColumn"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/popup container"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/popup container/VBoxContainer"]
layout_mode = 2
text = "LEVEL_UP_POPUP_LABEL_LEVELUP"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel/popup container/VBoxContainer"]
layout_mode = 2
text = "Current Level "
horizontal_alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/popup container/VBoxContainer"]
layout_mode = 2
text = "Elegir Traits"

[node name="EnemyColumn" type="VBoxContainer" parent="Panel/popup container"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="EnemyTitle" type="Label" parent="Panel/popup container/EnemyColumn"]
layout_mode = 2
text = "LEVEL_UP_POPUP_COLUMN_ENEMY"
horizontal_alignment = 1
vertical_alignment = 2

[node name="EnemyTraitsContainer" type="HBoxContainer" parent="Panel/popup container/EnemyColumn"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1
